# nucleofile

./: .gitignore  Cargo.toml  README.md  compile  development.md  guide.md  map.txt  rustfmt.toml
docs/: Makefile  main.tex
include/: target.h
src/: chem.rs  cli.rs  compute.rs  draw.rs  erro.rs  error.rs  gui.rs  interpreter.rs  main.c  main.rs  math.c  math.h  math.rs  nucleofile.c  nucleofile.h  outFiles.c  outFiles.h  read.rs  render.rs  tui.c  tui.h
