[package]
name = "nucleofile"
version = "0.1.1"
edition = "2024"

[dependencies]
# anyhow = "1.0.102"
clap = {version = "4.5", features = ["derive"]}
thiserror = "2.0.18"
image = "0.25"

egui = {version = "0.31", optional = true}
eframe = {version = "0.31", optional = true}

[features]
default = []
gui = ["dep:egui"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
